added languages and github

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   <body>
     <h1>Josh</h1>
     <p>Hello I am learning programming at The Iron Yard</p>
+    <h3>Programming Lang</h3>
+    <p>Javascript html css c#</p>
+    <a href="https://github.com/joshuahunt10" target="_blank">My Github Profile</a>
   </body>
 </html>
